Add play button to Flappy Bird game
Added a play button to start the game.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     
 </head>
 <body>
-    <canvas id="board"></canvas>
+    <div>
+        <canvas id="board"></canvas>
+        <button id="playBtn" onclick="playGame()">Play!</button>
+    </div>
+    
     <script src="src/js/script.js"></script>
 </body>
 </html>
